syntax = "proto3";

package cardano;

message BlockDate {
    uint64 epoch = 1;
    uint32 slot = 2;
}

message HeaderHash {
    bytes hash = 1;
}

message Block {
    bytes content = 1;
}
